--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <h2>Currently Reading</h2>
 <table>
 <tr>
-<td>Contact</td>
+<td><a href="books/Contact.md">Contact</a></td>
 <td>Carl Sagan</td>
 <td>Oct 28, 2022</td>
 </tr>
 <tr>
-<td>Columbine</td>
+<td><a href="books/Columbine.md">Columbine</a></td>
 <td>Dave Cullen</td>
 <td>Oct 22, 2022</td>
 </tr>
@@ -26,109 +26,109 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Neuromancer.md">Neuromancer</a></td>
+<td><a href="books/Neuromancer.md">Neuromancer</a></td>
 <td>William Gibson</td>
 <td>Mar 01, 2019</td>
 <td>😀🔫</td>
 </tr>
 <tr>
-<td><a href="Alone With You In The Ether.md">Alone With You In The Ether</a></td>
+<td><a href="books/Alone With You In The Ether.md">Alone With You In The Ether</a></td>
 <td>Olivie Blake</td>
 <td>Jun 13, 2022</td>
 <td>😭💔</td>
 </tr>
 <tr>
-<td><a href="How to Live Safely in a Science Fictional Universe.md">How To Live Safely in a Science Fiction Universe</a></td>
+<td><a href="books/How to Live Safely in a Science Fictional Universe.md">How To Live Safely in a Science Fiction Universe</a></td>
 <td>Charles Yu</td>
 <td>Feb 01, 2021</td>
 <td>🤔</td>
 </tr>
 <tr>
-<td><a href="Upright Woman Wanted.md">Upright Woman Wanted</a></td>
+<td><a href="books/Upright Woman Wanted.md">Upright Woman Wanted</a></td>
 <td>Sarah Gailey</td>
 <td>Sep 06, 2022</td>
 <td>🤠🏇👩‍❤️‍👨</td>
 </tr>
 <tr>
-<td><a href="To Be Taught If Fortunate.md">To Be Taught If Fortunate</a></td>
+<td><a href="books/To Be Taught If Fortunate.md">To Be Taught If Fortunate</a></td>
 <td>Becky Chambers</td>
 <td>Jan 20, 2021</td>
 <td>😉🙃😇</td>
 </tr>
 <tr>
-<td><a href="Project Hail Mary.md">Project Hail Mary</a></td>
+<td><a href="books/Project Hail Mary.md">Project Hail Mary</a></td>
 <td>Andy Weir</td>
 <td>Jun 01, 2021</td>
 <td>😆😢😘</td>
 </tr>
 <tr>
-<td><a href="Artemis.md">Artemis</a></td>
+<td><a href="books/Artemis.md">Artemis</a></td>
 <td>Andy Weir</td>
 <td>Dec 01, 2020</td>
 <td>😣😃</td>
 </tr>
 <tr>
-<td><a href="The First Fifteen Lives of Harry August.md">The First Fifteen Lives of Harry August</a></td>
+<td><a href="books/The First Fifteen Lives of Harry August.md">The First Fifteen Lives of Harry August</a></td>
 <td>Claire North</td>
 <td>Apr 06, 2021</td>
 <td>😄🤔😘</td>
 </tr>
 <tr>
-<td><a href="Universal Harvester.md">Universal Harvester</a></td>
+<td><a href="books/Universal Harvester.md">Universal Harvester</a></td>
 <td>John Darnielle</td>
 <td>Aug 03, 2022</td>
 <td>🤰🪓💔</td>
 </tr>
 <tr>
-<td><a href="Corporate Gunslinger.md">Corporate Gunslinger</a></td>
+<td><a href="books/Corporate Gunslinger.md">Corporate Gunslinger</a></td>
 <td>Doug Engstrom</td>
 <td>Jun 02, 2020</td>
 <td>🔥😢</td>
 </tr>
 <tr>
-<td><a href="The Martian.md">The Martian</a></td>
+<td><a href="books/The Martian.md">The Martian</a></td>
 <td>Andy Wier</td>
 <td>Jun 09, 2022</td>
 <td></td>
 </tr>
 <tr>
-<td><a href="There Is No Antimemetics Division.md">There Is No Antimemetics Division</a></td>
+<td><a href="books/There Is No Antimemetics Division.md">There Is No Antimemetics Division</a></td>
 <td>qntm</td>
 <td>Oct 22, 2022</td>
 <td>😍🤖</td>
 </tr>
 <tr>
-<td><a href="A Sudden Appearance of Hope.md">A Sudden Appearance of Hope</a></td>
+<td><a href="books/A Sudden Appearance of Hope.md">A Sudden Appearance of Hope</a></td>
 <td>Clair North</td>
 <td>Jan 20, 2020</td>
 <td>💔😭💔</td>
 </tr>
 <tr>
-<td><a href="Things Have Gotten Worse Since We Last Spoke.md">Things have Gotten Worse Since We Last Spoke</a></td>
+<td><a href="books/Things Have Gotten Worse Since We Last Spoke.md">Things have Gotten Worse Since We Last Spoke</a></td>
 <td>Eric LaRotta</td>
 <td>Aug 01, 2022</td>
 <td></td>
 </tr>
 <tr>
-<td><a href="Sea of Tranquility.md">Sea of Tranquility</a></td>
+<td><a href="books/Sea of Tranquility.md">Sea of Tranquility</a></td>
 <td>Emily St. John Mandel</td>
 <td>Sep 17, 2022</td>
 <td>😭🤕🫂</td>
 </tr>
 <tr>
-<td><a href="The Space Between Worlds.md">The Space Between Worlds</a></td>
+<td><a href="books/The Space Between Worlds.md">The Space Between Worlds</a></td>
 <td>Micaiah Johnson</td>
 <td>Jun 17, 2022</td>
 <td>☺️😍💜❤️</td>
 </tr>
 <tr>
-<td><a href="The Invisible Life of Addie LaRue.md">The Invisible Life of Addie LaRue</a></td>
+<td><a href="books/The Invisible Life of Addie LaRue.md">The Invisible Life of Addie LaRue</a></td>
 <td>V.E. Schwab</td>
 <td>Mar 30, 2022</td>
 <td>💔😭🕯️</td>
 </tr>
 <tr>
-<td><a href="Persephone Station.md">Persephone Station</a></td>
+<td><a href="books/Persephone Station.md">Persephone Station</a></td>
 <td>Stina Leicht</td>
 <td>Feb 05, 2022</td>
 <td>😊🔫🔫♥️</td>
@@ -145,13 +145,13 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Psalm For the wild built.md">Psalm For The Wild Built</a></td>
+<td><a href="books/Psalm For the wild built.md">Psalm For The Wild Built</a></td>
 <td>Becky Chambers</td>
 <td>Jan 12, 2022</td>
 <td>🥰☕🛌🍄</td>
 </tr>
 <tr>
-<td><a href="A Prayer for the Crown-Shy.md">A Prayer for the Crown-Shy</a></td>
+<td><a href="books/A Prayer for the Crown-Shy.md">A Prayer for the Crown-Shy</a></td>
 <td>Becky Chambers</td>
 <td>Aug 01, 2022</td>
 <td>☕🌲</td>
@@ -168,13 +168,13 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Axiom's End.md">Axioms End</a></td>
+<td><a href="books/Axiom's End.md">Axioms End</a></td>
 <td>Lindsey Ellis</td>
 <td>Oct 01, 2020</td>
 <td>☺️ 😭 😍</td>
 </tr>
 <tr>
-<td><a href="Truth of The Divine.md">Truth of The Divine</a></td>
+<td><a href="books/Truth of The Divine.md">Truth of The Divine</a></td>
 <td>Lindsey Ellis</td>
 <td>Apr 12, 2022</td>
 <td>💔😭😶</td>
@@ -191,13 +191,13 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="The Haunting of Tram Car 015.md">The Haunting of Tram Car 015</a></td>
+<td><a href="books/The Haunting of Tram Car 015.md">The Haunting of Tram Car 015</a></td>
 <td>P. Djèlí Clark</td>
 <td>Jan 08, 2020</td>
 <td>📚🤩</td>
 </tr>
 <tr>
-<td><a href="Master of Djinn.md">Master of Djinn</a></td>
+<td><a href="books/Master of Djinn.md">Master of Djinn</a></td>
 <td>P. Djèlí Clark</td>
 <td>Jun 03, 2021</td>
 <td>😇🥰🐈‍⬛</td>
@@ -214,13 +214,13 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="The Fifth Season.md">The Fifth Season</a></td>
+<td><a href="books/The Fifth Season.md">The Fifth Season</a></td>
 <td>N.K. Jemisin</td>
 <td>Sep 20, 2021</td>
 <td>🙂🥰😮</td>
 </tr>
 <tr>
-<td><a href="The Obelisk Gate.md">The Obelisk Gate</a></td>
+<td><a href="books/The Obelisk Gate.md">The Obelisk Gate</a></td>
 <td>N.K. Jeminsin</td>
 <td>Sep 25, 2020</td>
 <td>😭😮</td>
@@ -237,13 +237,13 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="A Long Way To A Small Angry Planet.md">A Long Way To A Small Angry Planet</a></td>
+<td><a href="books/A Long Way To A Small Angry Planet.md">A Long Way To A Small Angry Planet</a></td>
 <td>Becky Chambers</td>
 <td>Aug 01, 2020</td>
 <td>😃😇</td>
 </tr>
 <tr>
-<td><a href="A Closed and Common Orbit.md">A Closed and Common Orbit</a></td>
+<td><a href="books/A Closed and Common Orbit.md">A Closed and Common Orbit</a></td>
 <td>Becky Chambers</td>
 <td>Aug 20, 2020</td>
 <td>😭😭🥰😭</td>
@@ -260,7 +260,7 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Saga.md">Saga</a></td>
+<td><a href="books/Saga.md">Saga</a></td>
 <td>Brian K. Vaughan</td>
 <td>Sep 23, 2021</td>
 <td>😭😭😭</td>
@@ -277,7 +277,7 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Annihilation.md">Annihilation</a></td>
+<td><a href="books/Annihilation.md">Annihilation</a></td>
 <td>Jeff Vandermeer</td>
 <td>Feb 23, 2022</td>
 <td>🩸🦠🫁🫀🧠</td>
@@ -294,25 +294,25 @@
 <th>Mood</th>
 </tr>
 <tr>
-<td><a href="Eichmann in Jerusalem.md">Eichmann in Jerusalem</a></td>
+<td><a href="books/Eichmann in Jerusalem.md">Eichmann in Jerusalem</a></td>
 <td>Hannah Arendt</td>
 <td>Aug 28, 2022</td>
 <td></td>
 </tr>
 <tr>
-<td><a href="In The Dream House.md">In The Dream House</a></td>
+<td><a href="books/In The Dream House.md">In The Dream House</a></td>
 <td>Carmen Maria Machado</td>
 <td>Aug 31, 2022</td>
 <td></td>
 </tr>
 <tr>
-<td><a href="Against Memoir.md">Against Memoir</a></td>
+<td><a href="books/Against Memoir.md">Against Memoir</a></td>
 <td>Michelle Tea</td>
 <td>Sep 14, 2022</td>
 <td></td>
 </tr>
 <tr>
-<td><a href="Females.md">Females</a></td>
+<td><a href="books/Females.md">Females</a></td>
 <td>Andrea Long Chu</td>
 <td>Mar 30, 2022</td>
 <td></td>
@@ -324,139 +324,144 @@
 <h2>Unread</h2>
 <table>
 <tr>
-<td>A Dead Djinn in Cario</td>
+<th>Title</th>
+<th>Author</th>
+<th>Series</th>
+</tr>
+<tr>
+<td><a href="books/A Dead Djinn in Cairo.md">A Dead Djinn in Cario</a></td>
 <td>P. Djèlí Clark</td>
-<td>Magical Cairo, 1</td>
+<td>Magical Cairo</td>
 </tr>
 <tr>
-<td>Record of a Spaceborn Few</td>
+<td><a href="books/Record of a Spaceborn Few.md">Record of a Spaceborn Few</a></td>
 <td>Becky Chambers</td>
-<td>The Wayfarer Series, 3</td>
+<td>The Wayfarer Series</td>
 </tr>
 <tr>
-<td>Book of Night</td>
+<td><a href="books/Book of Night.md">Book of Night</a></td>
 <td>Holly Black</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Kingdom of Gods</td>
+<td><a href="books/The Kingdom of Gods.md">The Kingdom of Gods</a></td>
 <td>N. K. Jemisin</td>
-<td>The Inheritance Trilogy, 3</td>
+<td>The Inheritance Trilogy</td>
 </tr>
 <tr>
-<td>Defenestrate</td>
+<td><a href="books/Defenestrate.md">Defenestrate</a></td>
 <td>Renée Branum</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Stone Sky</td>
+<td><a href="books/The Stone Sky.md">The Stone Sky</a></td>
 <td>N.K. Jeminsin</td>
-<td>The Broken Earth, 3</td>
+<td>The Broken Earth</td>
 </tr>
 <tr>
-<td>Snow Crash</td>
+<td><a href="books/Snow Crash.md">Snow Crash</a></td>
 <td>Neal Stephonson</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Real Sugar is Hard to Find</td>
+<td><a href="books/Real Sugar is Hard to Find.md">Real Sugar is Hard to Find</a></td>
 <td>Sim Kern</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>A Song For a New Day</td>
+<td><a href="books/A Song For a New Day.md">A Song For a New Day</a></td>
 <td>Sarah Pansker</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Dead Astronauts</td>
+<td><a href="books/Dead Astronauts.md">Dead Astronauts</a></td>
 <td>Jeff Vandermeer</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Touch</td>
+<td><a href="books/Touch.md">Touch</a></td>
 <td>Calire North</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Battle of the Linguistic Mages</td>
+<td><a href="books/Battle of the linguistic Mages.md">Battle of the Linguistic Mages</a></td>
 <td>Scotto Moore</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Broken Kingdoms</td>
+<td><a href="books/The Broken Kingdoms.md">The Broken Kingdoms</a></td>
 <td>N. K. Jemisin</td>
-<td>The Inheritance Trilogy, 2</td>
+<td>The Inheritance Trilogy</td>
 </tr>
 <tr>
-<td>The Crying of Lot 49</td>
+<td><a href="books/The Crying of Lot 49.md">The Crying of Lot 49</a></td>
 <td>Thomas Penchon</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>An Unkindness of Ghost</td>
+<td><a href="books/An Unkindness of Ghost.md">An Unkindness of Ghost</a></td>
 <td>Rivers Solomon</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Galaxy and the Ground Within</td>
+<td><a href="books/The Galaxy and the Ground Within.md">The Galaxy and the Ground Within</a></td>
 <td>Becky Chambers</td>
-<td>The Wayfarer Series, 4</td>
+<td>The Wayfarer Series</td>
 </tr>
 <tr>
-<td>Zen and The Art of Motorcycle Maintenance</td>
+<td><a href="books/Zen and The Art of Motorcycle Maintenance.md">Zen and The Art of Motorcycle Maintenance</a></td>
 <td>Robert M. Pirsig</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Awakened Kingdom</td>
+<td><a href="books/The Awakened Kingdom.md">The Awakened Kingdom</a></td>
 <td>N. K. Jemisin</td>
-<td>The Inheritance Trilogy, 4</td>
+<td>The Inheritance Trilogy</td>
 </tr>
 <tr>
-<td>The End of The Day</td>
+<td><a href="books/The End Of The Day.md">The End of The Day</a></td>
 <td>Calire North</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Cyber Mage</td>
+<td><a href="books/Cyber Mage.md">Cyber Mage</a></td>
 <td>Saad Z. Hossain</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Gallant</td>
+<td><a href="books/Gallant.md">Gallant</a></td>
 <td>VE Schwab</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Three Body Problem</td>
+<td><a href="books/The Three Body Problem.md">The Three Body Problem</a></td>
 <td>Cixin Liu</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Alien Virus Love Disaster Stories</td>
+<td><a href="books/Alien Virus Love Disaster Stories.md">Alien Virus Love Disaster Stories</a></td>
 <td>Abbey Mei Otis</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Hundred Thousand Kingdoms</td>
+<td><a href="books/The Hundred Thousand Kingdoms.md">The Hundred Thousand Kingdoms</a></td>
 <td>N. K. Jemisin</td>
-<td>The Inheritance Trilogy, 1</td>
+<td>The Inheritance Trilogy</td>
 </tr>
 <tr>
-<td>The Employees</td>
+<td><a href="books/The Employees.md">The Employees</a></td>
 <td>Olga Ravn</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>Fight Club</td>
+<td><a href="books/Fight Club.md">Fight Club</a></td>
 <td>Chuck Palaniuk</td>
-<td>N/A</td>
+<td></td>
 </tr>
 <tr>
-<td>The Atlas Six</td>
+<td><a href="books/The Atlas Six.md">The Atlas Six</a></td>
 <td>Olivie Blake</td>
-<td>N/A</td>
+<td></td>
 </tr>
 </table>
 </section>
@@ -464,37 +469,42 @@
 <h2>Abandoned</h2>
 <table>
 <tr>
-<td>What If? Serious Scientific Answers to Absurd Hypothetical Questions</td>
+<th>Title</th>
+<th>Author</th>
+<th>Stopped reading on</th>
+</tr>
+<tr>
+<td><a href="books/What if.md">What If? Serious Scientific Answers to Absurd Hypothetical Questions</a></td>
 <td>Randall Munroe</td>
 <td>Aug 21, 2022</td>
 </tr>
 <tr>
-<td>Devil House</td>
+<td><a href="books/Devil House.md">Devil House</a></td>
 <td>John Darnielle</td>
 <td>Oct 22, 2022</td>
 </tr>
 <tr>
-<td>The Book of the Most Precious Substance</td>
+<td><a href="books/The Book of the Most Precious Substance.md">The Book of the Most Precious Substance</a></td>
 <td>Sara Gran</td>
 <td>Jun 02, 2022</td>
 </tr>
 <tr>
-<td>The City We Became</td>
+<td><a href="books/The City We Became.md">The City We Became</a></td>
 <td>N. K. Jemisin</td>
 <td>Feb 02, 2022</td>
 </tr>
 <tr>
-<td>Vicious</td>
+<td><a href="books/Vicious.md">Vicious</a></td>
 <td>V. E. Schwab</td>
 <td>Jan 12, 2022</td>
 </tr>
 <tr>
-<td>Far From The Light of Heaven</td>
+<td><a href="books/Far From The Light of Heaven.md">Far From The Light of Heaven</a></td>
 <td>Tade Thompson</td>
 <td>Feb 14, 2022</td>
 </tr>
 <tr>
-<td>Authority</td>
+<td><a href="books/Authority.md">Authority</a></td>
 <td>Jeff Vandermeer</td>
 <td>Mar 08, 2022</td>
 </tr>
