Book List Changed

--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <h2>Currently Reading</h2>
 <table>
 <tr>
-<td><a href="books/Contact.md">Contact</a></td>
-<td>Carl Sagan</td>
-<td>Oct 28, 2022</td>
-</tr>
-<tr>
-<td><a href="books/Columbine.md">Columbine</a></td>
-<td>Dave Cullen</td>
-<td>Oct 22, 2022</td>
+<td><a href="books/The Last Graduate.md">The Last Graduate</a></td>
+<td>Naomi Novik</td>
+<td>Dec 04, 2022</td>
 </tr>
 </table>
 </section>
@@ -54,6 +49,12 @@
 <td>Becky Chambers</td>
 <td>Jan 20, 2021</td>
 <td>😉🙃😇</td>
+</tr>
+<tr>
+<td><a href="books/Contact.md">Contact</a></td>
+<td>Carl Sagan</td>
+<td>Dec 07, 2022</td>
+<td></td>
 </tr>
 <tr>
 <td><a href="books/Project Hail Mary.md">Project Hail Mary</a></td>
@@ -264,6 +265,23 @@
 <td>Brian K. Vaughan</td>
 <td>Sep 23, 2021</td>
 <td>😭😭😭</td>
+</tr>
+</table>
+</section>
+<section id="The-Scholomance">
+<h3>The Scholomance</h3>
+<table>
+<tr>
+<th>Title</th>
+<th>Author</th>
+<th>Read On</th>
+<th>Mood</th>
+</tr>
+<tr>
+<td><a href="books/A Deadly Education.md">A Deadly Education</a></td>
+<td>Naomi Novik</td>
+<td>Dec 03, 2022</td>
+<td>🪓😁🏫</td>
 </tr>
 </table>
 </section>
@@ -497,6 +515,11 @@
 <td><a href="books/Vicious.md">Vicious</a></td>
 <td>V. E. Schwab</td>
 <td>Jan 12, 2022</td>
+</tr>
+<tr>
+<td><a href="books/Columbine.md">Columbine</a></td>
+<td>Dave Cullen</td>
+<td>Dec 07, 2022</td>
 </tr>
 <tr>
 <td><a href="books/Far From The Light of Heaven.md">Far From The Light of Heaven</a></td>
