Book List Changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <p><LINK href="style.css" rel="stylesheet" type="text/css"></p>
+<section id="Ellie's-Awesome-Book-List">
+<h1>Ellie&rsquo;s Awesome Book List</h1>
 <section id="Currently-Reading">
 <h2>Currently Reading</h2>
 <table>
+<tr>
+<th>Title</th>
+<th>Author</th>
+<th>Started on</th>
+</tr>
 <tr>
 <td><a href="books/The Last Graduate.md">The Last Graduate</a></td>
 <td>Naomi Novik</td>
@@ -532,4 +539,5 @@
 <td>Mar 08, 2022</td>
 </tr>
 </table>
+</section>
 </section>
